# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  15 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wording about network modules in /etc/modules.autoload.d/*,
    #118419.

  14 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Changed runscript.sh to store it's services to restart like rc.

* baselayout-1.12.0_pre14 (13 Jan 2006)

  13 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning to modules.autoload.d files stating that it's a bad idea
    to put modules there that trigger hotplug events which in turn start
    services, #118419.

    Services that need a service which is inactive at boot are now scheduled
    to start when the inactive service starts, #118801.

  12 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interactive start is now controllable by RC_INTERACTIVE="yes" and will
    probe to see if we can go interactive.

    Interactive start should now work on Sparc, #104067.

  11 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now traps interrupt signals and rolls back its status to what
    it was when before it started.

    bonding module now supports space seperated and array variables, #118590.

    start-stop-daemon now waits for upto 1 second if it returns 0 and we
    don't have a valid process.

    A more user friendly message is reported when an interface does not exist.

  10 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Removed runlevel dependancies from runscript.sh as they're now in rc.
    
    runscript.sh now has much better locking, #118418.

    We now store services to restart when we end up as inactive from a restart
    or we were stopped with IN_BACKGROUND=true, #112088.

    We no longer stop and start services already running on runlevel change if
    they're in the runlevel we're changing too.

    We can now wait_sevice on services started outside of rc.
