@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  16 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Renamed restart in $svcdir to scheduled as it makes much more sense.
+
   15 Jan 2005; Roy Marples <uberlord@gentoo.org>:
 
     Changed wording about network modules in /etc/modules.autoload.d/*,
